Website gets longer on refresh Fixes #5 added overflow-anchor. related to a chrome scroll anchoring feature

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+    overflow-anchor: none;
     min-height: 100%;
     background: #eee;
     font-family: 'Lato', sans-serif;
